name:               gdax
version:            0.1.0.0
synopsis:           Simple project template from stack
description:        Please see README.md
homepage:           http://github.com/githubuser/gdax#readme
license:            MIT
license-file:       LICENSE
author:             Author name here
maintainer:         example@example.com
copyright:          2010 Author Here
category:           Web
build-type:         Simple
cabal-version:      >=1.10

executable gdax
    main-is:            Main.hs
    hs-source-dirs:     src
    default-language:   Haskell2010

    ghc-options:        -rtsopts

    build-depends:      base            >4 && < 6

                      , aeson
                      , aeson-casing
                      , conduit
                      , conduit-extra
                      , exceptions
                      , http-client
                      , http-client-tls
                      , http-conduit
                      , lens
                      , lens-aeson
                      , mtl
                      , time
                      , text
                      , wreq