name:               gdax
version:            0.1.0.0
synopsis:           API Wrapping for Coinbase's GDAX exchange.
description:        Please see README.md
homepage:           https://github.com/AndrewRademacher/gdax
license:            MIT
license-file:       LICENSE
author:             Andrew Rademacher
maintainer:         Andrew Rademacher <andrewrademacher@icloud.com>
copyright:          2017 Andrew Rademacher
category:           Web
build-type:         Simple
cabal-version:      >=1.10

library
    hs-source-dirs:    lib
    default-language:  Haskell2010

    ghc-options:       -Wall

    exposed-modules:   Network.GDAX
                       Network.GDAX.Core
                       Network.GDAX.Exceptions
                       Network.GDAX.MarketData
                       Network.GDAX.Private

    build-depends:     base     >4 && < 6

                     , aeson
                     , base64-bytestring
                     , byteable
                     , bytestring
                     , cryptohash
                     , exceptions
                     , http-client
                     , http-client-tls
                     , lens
                     , lens-aeson
                     , mtl
                     , text
                     , time
                     , wreq

executable sandbox
    main-is:            Sandbox.hs
    hs-source-dirs:     app
    default-language:   Haskell2010

    ghc-options:        -rtsopts -Wall

    build-depends:      base            >4 && < 6

                      , gdax

                      , aeson-pretty
                      , base64-bytestring
                      , bytestring